syntax = "proto3";

option go_package = ".;acproto";

package AcFunDanmu;

import "CommonActionSignalComment.proto";

message CommonStateSignalRecentComment {
	repeated CommonActionSignalComment comment = 1;
}
