syntax = "proto3";

package AcFunDanmu;

message ZtLiveNotifySignalItem {
	string signalType = 1;
	bytes payload = 2;
}